--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -16,7 +16,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Bootswatch theme-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" integrity="sha384-S7YMK1xjUjSpEnF4P8hPUcgjXYLZKK3fQW1j5ObLSl787II9p8RO9XUGehRmKsxd" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" integrity="sha384-S7YMK1xjUjSpEnF4P8hPUcgjXYLZKK3fQW1j5ObLSl787II9p8RO9XUGehRmKsxd" crossorigin="anonymous"> -->
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -25,6 +25,45 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        header{
+            background: rgba(0,0,0,0.7);
+            color: #0f0;
+        }
+        header .container{
+            background: rgba(255,0,255,0.7);
+        }
+        main{
+            background: rgba(255,155,255,0.7);
+        }
+        main section.container .row>div{
+            background: rgba(255,255,0,0.7);
+            border: 1px solid red;
+            border-radius: 20px;
+        }
+        /*@media query*/
+        @media all and (min-width: 768px) {
+            main section.container .row-margin>div{
+                margin-left: -100px;
+            }
+        }
+        /*all and (min-width: 992px) === (min-width: 992px)*/
+        @media all and (min-width: 992px) {
+            main section.container .row-margin>div{
+                margin-left: -80px;
+            }
+        }
+        
+        main section.container-fluid .row>div{
+            background: rgba(255,0,255,0.7);
+            border: 1px solid red;
+            border-radius: 20px;
+        }
+        footer.container-fluid mark{
+            background: rgba(0,0,0,0.7) !important;
+            color: #0f0 !important;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -49,14 +88,103 @@
     </header>
     <main>
         <section>
-            <h1></h1>
+            <h2>section title</h2>
+            <p>
+                div.container === main.container
+            </p>
         </section>
-        <article>
-            <h1></h1>
-        </article>
+        <section class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h2>section.container title</h2>
+                    <p>
+                        col-md-9
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+            </div>
+            <div class="row row-margin">
+                <div class="col-md-9">
+                    <h2>section.container title</h2>
+                    <p>
+                        col-md-9
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-md-9">
+                    <h2>section.container-fluid title</h2>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        col-md-6
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-        <div></div>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <mark>copyright @ xgqfrms 2016</mark>
+            </div>
+        </div>
     </footer>
     <!-- js -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
