--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, minimum-scale=1.0, maximum-scale=3.0">
     <title>Bootstrap with CDN</title>
-    <!-- <meta http-equiv="refresh" content="1; url=./Bootstrap/src/index.html"> -->
+    <meta http-equiv="refresh" content="1; url=./Bootstrap/src/index.html">
     <!-- 自动刷新 $ 重定向 -->
     <!-- reset css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
