--- a/Bootstrap/src/index.html
+++ b/Bootstrap/src/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+<!--<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"> -->
+<!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, minimum-scale=1.0, maximum-scale=3.0">
     <title>Bootstrap with Local libs</title>
-    <!-- <meta http-equiv="refresh" content="1; url=./Bootstrap/src/index.html"> -->
+    <meta http-equiv="refresh" content="37; url=http://webgeeker.xyz/Bootstrap/index.html">
     <!-- 自动刷新 $ 重定向 -->
     <!-- reset css -->
     <link rel="stylesheet" href="./css/common/normalize.css">
