--- a/index.html
+++ b/index.html
@@ -538,9 +538,30 @@
     <!-- https://rollbar.com/Xray/Full-Stack-WebApp/ -->
     <script src="./js/vendor.js"></script>
     <script src="./js/main.js"></script>
-<!--free form-->
+<!--typeform-->
     <a class="typeform-share button" href="https://xgqfrms.typeform.com/to/viZ8Kp" data-mode="1" target="_blank">Subscribe !</a>
 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+<!-- woofu -->
+  <div id="wufoo-z1v1phzc19ujqzg">
+Fill out my <a href="https://xgqfrms2016.wufoo.com/forms/z1v1phzc19ujqzg">online form</a>.
+</div>
+<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">HTML Forms powered by <a href="http://www.wufoo.com">Wufoo</a>.</div>
+<script type="text/javascript">var z1v1phzc19ujqzg;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'xgqfrms2016',
+'formHash':'z1v1phzc19ujqzg',
+'autoResize':true,
+'height':'460',
+'async':true,
+'host':'wufoo.com',
+'header':'show',
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { z1v1phzc19ujqzg = new WufooForm();z1v1phzc19ujqzg.initialize(options);z1v1phzc19ujqzg.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
 
 </body>
 </html>
