--- a/index.html
+++ b/index.html
@@ -308,11 +308,7 @@
                             </div>
                         </div>
                     </li>
-                    <!-- disqus -->
-                    <li>
-                        <div id="disqus_thread"></div>
-                        <a href="http://webgeeker.xyz/index.html#disqus_thread">Link</a>
-                    </li>
+<!--          error disqus            -->
                     <!-- <li>
                         <div class="product-wrap wow lightSpeedIn">
                             <img src=images/product2.png>
@@ -519,6 +515,11 @@
             (d.head || d.body).appendChild(s);
         })();
     </script>
+    <!-- disqus -->
+                    <li>
+                        <div id="disqus_thread"></div>
+                        <a href="http://webgeeker.xyz/index.html#disqus_thread">Link</a>
+                    </li>
     <noscript>
         Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
     </noscript>
