--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html 🔥>
+<html lang="en" 💻="Hey! I'm WebGeeker 😎. Feel free to snoop 👀, tweet any questions about this site @WebGeeker">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
