--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html 🔥>
-<html lang="en" 💻="Hey! I'm WebGeeker 😎. Feel free to snoop 👀, tweet any questions about this site @WebGeeker">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -261,6 +261,7 @@
     <section class=cf id=product>
         <div class="section-inner cf">
             <h3 class=section-title>What I'm doing</h3>
+            <span>💻="Hey! I'm WebGeeker 😎. Feel free to snoop 👀, tweet any questions about this site 🔥 @WebGeeker</span>
             <div class=divider-line></div>
             <div class="product-info section-info cf">
                 <ul class="item cf">
